增加config读取配置文件对slice的支持；修改一些其他的小问题

--- a/config/example.yml
+++ b/config/example.yml
@@ -30,3 +30,8 @@ b:
 h: 1.01
 "n":
   a: "test"
+"s":
+  - name: "slice_user_right"
+    value: "${PRE_USER}"
+  - name: "slice_user_wrong"
+    value: "${USER}"
